Reparation des image qui ne s'affichait pas

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div>
         <img
           class="logo"
-          src="/Assets/Logos/logo_360.agency.png"
+          src="./Assets/Logos/logo_360.agency.png"
           alt="logo"
           width="150"
         />
@@ -69,7 +69,7 @@
 
         <div class="hero_image">
           <img
-            src="/Assets/Images/Dev-holding-laptop.png"
+            src="./Assets/Images/Dev-holding-laptop.png"
             alt="image"
             width="750px"
           />
@@ -114,7 +114,7 @@
 
         <div class="service-flex">
           <div class="service1">
-            <img src="/Assets/Icones/design.svg" alt="icone" />
+            <img src="./Assets/Icones/design.svg" alt="icone" />
             <h3>Design</h3>
             <p class="descpt">
               Je suis spécialisé dans le design UI/UX pour le web et le mobile,
@@ -124,7 +124,7 @@
           </div>
 
           <div class="service2">
-            <img src="/Assets/Icones/dev-web.svg" alt="icone" />
+            <img src="./Assets/Icones/dev-web.svg" alt="icone" />
             <h3>Développement Web</h3>
             <p class="descpt">
               Je conçois et développe des sites web performants et adaptés aux
@@ -133,7 +133,7 @@
           </div>
 
           <div class="service3">
-            <img src="/Assets/Icones/dev-mobile.svg" alt="icone" />
+            <img src="./Assets/Icones/dev-mobile.svg" alt="icone" />
             <h3>Développement Mobile</h3>
             <p class="descpt">
               Je crée des applications mobiles fluides et intuitives, pour
@@ -142,7 +142,7 @@
           </div>
 
           <div class="service4">
-            <img src="/Assets/Icones/formation.svg" alt="icone" />
+            <img src="./Assets/Icones/formation.svg" alt="icone" />
             <h3>Formation</h3>
             <p class="descpt">
               Je propose des formations pratiques et personnalisées pour vous
@@ -162,7 +162,7 @@
 
         <div class="real-grid">
           <div class="real1">
-            <img src="/Assets/Projets/projet-1.jpg" alt="projet" />
+            <img src="./Assets/Projets/projet-1.jpg" alt="projet" />
             <h3>Plateforme E-learning</h3>
             <p>
               Design Web/Développement Web pour une plateforme d’apprentissage
@@ -171,7 +171,7 @@
           </div>
 
           <div class="real2">
-            <img src="/Assets/Projets/projet-2.jpg" alt="projet" />
+            <img src="./Assets/Projets/projet-2.jpg" alt="projet" />
             <h3>Travel App</h3>
             <p>
               Développement Mobile / App Design pour une application de voyage
@@ -180,7 +180,7 @@
           </div>
 
           <div class="real3">
-            <img src="/Assets/Projets/projet-3.jpg" alt="projet" />
+            <img src="./Assets/Projets/projet-3.jpg" alt="projet" />
             <h3>Landing Page</h3>
             <p>
               Web Design et Développement Web pour une landing page attrayante
@@ -258,7 +258,7 @@
         <h2>Temoignages</h2>
 
         <div class="temg1">
-          <img src="/Assets/Icones/left.svg" alt="precedant" height="60px" />
+          <img src="./Assets/Icones/left.svg" alt="precedant" height="60px" />
           <p>
             Les designs de Bonkey FIAGNIGBE sont à la fois visuellement
             captivants et très efficaces. Elle a transformé notre site web,
@@ -266,12 +266,12 @@
             sens du détail et son approche créative sont remarquables. Je la
             recommande vivement !
           </p>
-          <img src="/Assets/Icones/right.svg" alt="suivant" height="60px" />
+          <img src="./Assets/Icones/right.svg" alt="suivant" height="60px" />
         </div>
 
         <div class="auteur">
           <img
-            src="/Assets/Temoins/temoin1.jpg"
+            src="./Assets/Temoins/temoin1.jpg"
             alt="jean kodjo"
             height="50px"
           />
@@ -294,34 +294,34 @@
           <ul class="contact-info">
             <li>
               <img
-                src="/Assets/Icones/telephone.svg"
+                src="./Assets/Icones/telephone.svg"
                 alt="telephone"
                 height="20px"
               />
               00228 91 54 32 27
             </li>
             <li>
-              <img src="/Assets/Icones/mail.svg" alt="email" height="20px" />
+              <img src="./Assets/Icones/mail.svg" alt="email" height="20px" />
               <a href="mailto:fbonkey22@ggmail.com">fbonkey22@ggmail.com</a>
             </li>
             <li>
-              <img src="/Assets/Icones/map.svg" alt="map" height="20px" /> Lomé,
+              <img src="./Assets/Icones/map.svg" alt="map" height="20px" /> Lomé,
               Togo
             </li>
           </ul>
 
           <div class="social-media">
             <a href="">
-              <img src="/Assets/Icones/twitter.png" alt="" width="20px" />
+              <img src="./Assets/Icones/twitter.png" alt="" width="20px" />
             </a>
             <a href="">
-              <img src="/Assets/Icones/instagram.png" alt="" width="20px" />
+              <img src="./Assets/Icones/instagram.png" alt="" width="20px" />
             </a>
             <a href="">
-              <img src="/Assets/Icones/facebook.png" alt="" width="20px" />
+              <img src="./Assets/Icones/facebook.png" alt="" width="20px" />
             </a>
             <a href="">
-              <img src="/Assets/Icones/linkedin.png" alt="" width="20px" />
+              <img src="./Assets/Icones/linkedin.png" alt="" width="20px" />
             </a>
           </div>
         </div>
@@ -364,7 +364,7 @@
               <a href="#logo">
                 <img
                   class="logo"
-                  src="/Assets/Logos/logo_360.agency_white.png"
+                  src="./Assets/Logos/logo_360.agency_white.png"
                   alt="logo"
                   width="100px"
                 />
@@ -382,16 +382,16 @@
         <p>Suivez moi sur les réseaux sociaux</p>
         <div class="social-media">
           <a href="#">
-            <img src="/Assets/Icones/twitter_white.png" alt="" width="20px" />
+            <img src="./Assets/Icones/twitter_white.png" alt="" width="20px" />
           </a>
           <a href="#">
-            <img src="/Assets/Icones/instagram_white.png" alt="" width="20px" />
+            <img src="./Assets/Icones/instagram_white.png" alt="" width="20px" />
           </a>
           <a href="#">
-            <img src="/Assets/Icones/facebook _white.png" alt="" width="20px" />
+            <img src="./Assets/Icones/facebook _white.png" alt="" width="20px" />
           </a>
           <a href="#">
-            <img src="/Assets/Icones/linkedin_white.png" alt="" width="20px" />
+            <img src="./Assets/Icones/linkedin_white.png" alt="" width="20px" />
           </a>
         </div>
 
